kafka products
